Support concurrent java processes, one per group, to maximize cpu